# cuboid_sim

./: .gitmodules  .travis.rosinstall  .travis.yml  LICENSE  README.md
.github/workflows/: main.yml
cuboid_control/: CMakeLists.txt  package.xml
cuboid_control/config/: kit_control_unlimited.yaml
cuboid_control/include/cuboid_control/: TwoWheeled.h
cuboid_control/launch/: kit_control_gazebo.launch
cuboid_control/scripts/: imu_filter.py
cuboid_control/src/: TwoWheeled.cpp  base_driver_node.cpp  laser_safety_filter.cpp
cuboid_control/src/tags/: c++_tags
cuboid_description/: CMakeLists.txt  package.xml
cuboid_description/launch/: kit_display.launch
cuboid_description/meshes/: cuboid.stl  cuboid_dock.stl
cuboid_description/meshes/sensors/: AkuSense.stl  connector.stl  hc-sr04.stl  kinect_v2.stl
cuboid_description/robots/: cuboid_robot.urdf.xacro
cuboid_description/test/: test_urdf.cpp
cuboid_description/urdf/: common_properties.urdf.xacro  cuboid_base.gazebo
cuboid_description/urdf/cuboid/: cuboid_base.urdf.xacro  cuboid_library.urdf.xacro  cuboid_properties.urdf.xacro
cuboid_description/urdf/sensors/: camera.urdf.xacro  camera_gazebo.urdf.xacro  connecter.urdf.xacro  gyro_imu.gazebo.xacro  gyro_imu.urdf.xacro  hc-sr04.urdf.xacro  hc-sr04_gazebo.urdf.xacro  hokuyo_lx30_gpu_laser.gazebo.xacro  hokuyo_lx30_laser.gazebo.xacro  hokuyo_lx30_laser.urdf.xacro  kinect.urdf.xacro  kinect2.urdf.xacro  kinect_gazebo.urdf.xacro  libgazebo_imu.gazebo.xacro  pico_flexx.urdf.xacro  pico_flexx_gazebo.urdf.xacro  quanergy_m8.urdf.xacro  rplidar.gazebo.xacro  rplidar.urdf.xacro  rplidar_gpu.gazebo.xacro  wheel.urdf.xacro  wheel_gazebo.urdf.xacro
cuboid_gazebo/: CMakeLists.txt  package.xml
cuboid_gazebo/config/: laser_filter-120.yaml  laser_filter-130.yaml  laser_filter-160.yaml  laser_filter-90.yaml  laser_filter_cut45-135.yaml
cuboid_gazebo/launch/: robot_office.launch
cuboid_gazebo/launch/include/: cuboid.launch.xml  kinect2_with_pcl.launch  picoflexx_with_pcl.launch
cuboid_gazebo/worlds/: cuboid_office.world
cuboid_navigation/: CMakeLists.txt  package.xml
cuboid_navigation/config/: costmap_exploration.yaml  costmap_global.yaml  costmap_local.yaml  move_base.yaml  navigation.rviz
cuboid_navigation/config/cuboid/: costmap_common.yaml  costmap_global.yaml  costmap_local.yaml  move_base.yaml  move_base_local.yaml
cuboid_navigation/launch/: build_map.launch  exploration.launch  exploration_demo.launch  explorer_lite.launch  gmapping.launch  navigation.launch
cuboid_navigation/launch/include/: amcl.launch.xml  move_base.launch.xml
cuboid_navigation/scripts/: rotate_in_place.py  rotate_in_place_vel.py  show_movebase_status.py
cuboid_navigation/scripts/util/: movebase_sub.py
cuboid_sim/: CMakeLists.txt  package.xml
cuboid_teleop/: CMakeLists.txt  package.xml
cuboid_teleop/config/: joy.config.yaml  mux_joy.yaml  twist_mux_locks.yaml  twist_mux_topics.yaml
cuboid_teleop/launch/: teleop.launch  teleop_joy.launch  teleop_key.launch
cuboid_teleop/scripts/: teleop_emotion.py
