<?xml version="1.0"?>
<package format="2">
  <name>cuboid_gazebo</name>
  <version>0.0.0</version>
  <description>The cuboid_gazebo package</description>


  <license>Apache License,Version2.0</license>
  <url type="website">http://github.com/sbgisen/cuboid_sim</url>

  <author email="hirofumi01.watanabe@g.softbank.co.jp">Hirofumi Watanabe</author>
  <maintainer email="SBGRP-git@g.softbank.co.jp">SoftBank</maintainer>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <!-- <build_depend>cuboid_description</build_depend> -->
  <!-- <build_depend>cuboid_navigation</build_depend>  -->
  <!-- <build_depend>cuboid_teleop</build_depend>      -->
  <!-- <build_depend>cuboid_control</build_depend>     -->
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>gazebo_ros_pkgs</build_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>laser_filters</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>hector_gazebo</build_depend>
  <build_depend>velodyne_gazebo_plugins</build_depend>
  <!-- <build_export_depend>cuboid_description</build_export_depend> -->
  <!-- <build_export_depend>cuboid_navigation</build_export_depend>  -->
  <!-- <build_export_depend>cuboid_teleop</build_export_depend>      -->
  <!-- <build_export_depend>cuboid_control</build_export_depend>     -->
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>gazebo_ros_control</build_export_depend>
  <build_export_depend>gazebo_ros_pkgs</build_export_depend>
  <build_export_depend>joint_state_publisher</build_export_depend>
  <build_export_depend>laser_filters</build_export_depend>
  <build_export_depend>nodelet</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>hector_gazebo</build_export_depend>
  <build_export_depend>velodyne_gazebo_plugins</build_export_depend>
  <exec_depend>cuboid_description</exec_depend>
  <exec_depend>cuboid_navigation</exec_depend>
  <exec_depend>cuboid_teleop</exec_depend>
  <exec_depend>cuboid_control</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>laser_filters</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>hector_gazebo</exec_depend>
  <exec_depend>velodyne_gazebo_plugins</exec_depend>
  <test_depend>rostest</test_depend>
  <test_depend>roslaunch</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
