<?xml version="1.0"?>
<package format="2">
  <name>cuboid_navigation</name>
  <version>0.0.0</version>
  <description>The cuboid_navigation package</description>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Apache License,Version2.0</license>
  <url type="website">http://github.com/sbgisen/cuboid_sim</url>

  <author email="hirofumi01.watanabe@g.softbank.co.jp">Hirofumi Watanabe</author>
  <maintainer email="SBGRP-git@g.softbank.co.jp">SoftBank</maintainer>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>slam_gmapping</build_depend>
  <build_depend>navigation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>frontier_exploration</build_depend>
  <build_depend>explore_lite</build_depend>
  <build_depend>spatio_temporal_voxel_layer</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>slam_gmapping</build_export_depend>
  <build_export_depend>navigation</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>spatio_temporal_voxel_layer</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>frontier_exploration</build_export_depend>
  <build_export_depend>explore_lite</build_export_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>navigation</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>frontier_exploration</exec_depend>
  <exec_depend>explore_lite</exec_depend>
  <exec_depend>spatio_temporal_voxel_layer</exec_depend>
  <exec_depend>range_sensor_layer</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <test_depend>rostest</test_depend>
  <test_depend>roslaunch</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
