<?xml version="1.0"?>
<package format="2">
  <name>cuboid_sim</name>
  <version>0.0.0</version>
  <description>The cuboid_sim package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="SBGRP-git@g.softbank.co.jp">SoftBank Corp.</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Apache License,Version2.0</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>cuboid_control</exec_depend>
  <exec_depend>cuboid_description</exec_depend>
  <exec_depend>cuboid_gazebo</exec_depend>
  <exec_depend>cuboid_teleop</exec_depend>
  <exec_depend>cuboid_navigation</exec_depend>
  <exec_depend>rviz</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
      <metapackage/>  
  </export>
</package>
